// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"TextArea" renders 1`] = `
.emotion-0 {
  background: rgb(247, 248, 250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  background: #fff;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #bac8d1;
  caret-color: #0c78ba;
  color: rgb(52, 56, 59);
  font-weight: 300;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 16px 16px;
  resize: none;
  width: 100%;
}

.emotion-1::-moz-placeholder {
  color: rgb(141, 152, 159);
  font-size: 11px;
  text-transform: none;
  opacity: 1;
}

.emotion-1::-ms-input-placeholder {
  color: rgb(141, 152, 159);
  font-size: 11px;
  text-transform: none;
}

.emotion-1::-webkit-input-placeholder {
  color: rgb(141, 152, 159);
  font-size: 11px;
  text-transform: none;
}

.emotion-1:focus {
  box-shadow: 0 0 0 1px #0c78ba;
}

.emotion-1:invalid {
  box-shadow: 0 0 0 1px #bac8d1;
}

<div
  className="emotion-0"
>
  <textarea
    className="textarea emotion-1"
  >
    TextArea
  </textarea>
</div>
`;

exports[`"TextArea" renders as disabled 1`] = `
.emotion-0 {
  background: rgb(247, 248, 250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  background: rgba(127, 136, 142, 0.16000000000000003);
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #bac8d1;
  caret-color: #0c78ba;
  color: rgb(52, 56, 59);
  font-weight: 300;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 16px 16px;
  resize: none;
  width: 100%;
}

.emotion-1::-moz-placeholder {
  color: rgb(141, 152, 159);
  font-size: 11px;
  text-transform: none;
  opacity: 1;
}

.emotion-1::-ms-input-placeholder {
  color: rgb(141, 152, 159);
  font-size: 11px;
  text-transform: none;
}

.emotion-1::-webkit-input-placeholder {
  color: rgb(141, 152, 159);
  font-size: 11px;
  text-transform: none;
}

.emotion-1:focus {
  box-shadow: 0 0 0 1px #0c78ba;
}

.emotion-1:invalid {
  box-shadow: 0 0 0 1px #bac8d1;
}

<div
  className="emotion-0"
>
  <textarea
    className="textarea emotion-1"
    disabled={true}
  >
    TextArea
  </textarea>
</div>
`;

exports[`"TextArea" renders as invalid 1`] = `
.emotion-0 {
  background: rgb(247, 248, 250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  background: #fff;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #e02020;
  caret-color: #0c78ba;
  color: rgb(52, 56, 59);
  font-weight: 300;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 16px 16px;
  resize: none;
  width: 100%;
}

.emotion-1::-moz-placeholder {
  color: rgb(141, 152, 159);
  font-size: 11px;
  text-transform: none;
  opacity: 1;
}

.emotion-1::-ms-input-placeholder {
  color: rgb(141, 152, 159);
  font-size: 11px;
  text-transform: none;
}

.emotion-1::-webkit-input-placeholder {
  color: rgb(141, 152, 159);
  font-size: 11px;
  text-transform: none;
}

.emotion-1:focus {
  box-shadow: 0 0 0 1px #0c78ba;
}

<div
  className="emotion-0"
>
  <textarea
    className="textarea emotion-1"
  >
    TextArea
  </textarea>
</div>
`;

exports[`"TextArea" renders with placeholderTextTransform 1`] = `
.emotion-0 {
  background: rgb(247, 248, 250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  background: #fff;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #bac8d1;
  caret-color: #0c78ba;
  color: rgb(52, 56, 59);
  font-weight: 300;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 16px 16px;
  resize: none;
  width: 100%;
}

.emotion-1::-moz-placeholder {
  color: rgb(141, 152, 159);
  font-size: 11px;
  text-transform: uppercase;
  opacity: 1;
}

.emotion-1::-ms-input-placeholder {
  color: rgb(141, 152, 159);
  font-size: 11px;
  text-transform: uppercase;
}

.emotion-1::-webkit-input-placeholder {
  color: rgb(141, 152, 159);
  font-size: 11px;
  text-transform: uppercase;
}

.emotion-1:focus {
  box-shadow: 0 0 0 1px #0c78ba;
}

.emotion-1:invalid {
  box-shadow: 0 0 0 1px #bac8d1;
}

<div
  className="emotion-0"
>
  <textarea
    className="textarea emotion-1"
    placeholder="TextArea"
  >
    TextArea
  </textarea>
</div>
`;
